refactor(stock): 库存批次生命周期链路收拢
- StockBatchService 解除对 StockService 的依赖，改为依赖 StockMapper + StockDomainService
- StockService.increase(StockIncreaseCommand) 统一入口：入库时一次调用完成库存增加+批次创建+日志
- StockService.decrease 扩展 sourceType/sourceId 重载，内部调用 FEFO 批次扣减
- StockBatchService.damage 内聚化，内部直接扣减库存
- 消除旧 consumeAvailableBatches，新增 consumeByFefo 返回 BatchConsumption record
- PurchaseInboundService / OutboundService 简化为单次调用