@@ -1,7 +1,9 @@
 package com.supermarket.inventory.stockbatch.service;
 
 import com.supermarket.inventory.common.exception.BusinessException;
-import com.supermarket.inventory.stock.service.StockService;
+import com.supermarket.inventory.stock.domain.StockDomainService;
+import com.supermarket.inventory.stock.entity.Stock;
+import com.supermarket.inventory.stock.mapper.StockMapper;
 import com.supermarket.inventory.stockbatch.dto.StockBatchCreateCommand;
 import com.supermarket.inventory.stockbatch.dto.StockBatchDamageRequest;
 import com.supermarket.inventory.stockbatch.entity.StockBatch;
@@ -15,7 +17,9 @@ import org.springframework.transaction.annotation.Transactional;
 import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.Objects;
 
 @Service
 public class StockBatchService {
@@ -38,11 +42,14 @@ public class StockBatchService {
     private static final String STATUS_CLOSED = "CLOSED";
 
     private final StockBatchMapper stockBatchMapper;
-    private final StockService stockService;
+    private final StockMapper stockMapper;
+    private final StockDomainService stockDomainService;
 
-    public StockBatchService(StockBatchMapper stockBatchMapper, StockService stockService) {
+    public StockBatchService(StockBatchMapper stockBatchMapper, StockMapper stockMapper,
+                             StockDomainService stockDomainService) {
         this.stockBatchMapper = stockBatchMapper;
-        this.stockService = stockService;
+        this.stockMapper = stockMapper;
+        this.stockDomainService = stockDomainService;
     }
 
     @Transactional
@@ -62,17 +69,21 @@ public class StockBatchService {
         try {
             Long id = stockBatchMapper.insertBatch(batch);
             if (id == null) {
-                throw new BusinessException("\u5e93\u5b58\u6279\u6b21\u4fdd\u5b58\u5931\u8d25");
+                throw new BusinessException("库存批次保存失败");
             }
             batch.setId(id);
         } catch (DuplicateKeyException exception) {
-            throw new BusinessException("\u5e93\u5b58\u6279\u6b21\u53f7\u91cd\u590d\uff0c\u8bf7\u91cd\u8bd5");
+            throw new BusinessException("库存批次号重复，请重试");
         }
         return batch;
     }
 
     @Transactional
     public void writePurchaseInboundLog(StockBatch batch) {
+        writePurchaseInboundLog(batch, SOURCE_TYPE_PURCHASE_INBOUND_ITEM, batch.getPurchaseInboundItemId());
+    }
+
+    public void writePurchaseInboundLog(StockBatch batch, String sourceType, Long sourceId) {
         StockBatchLog log = new StockBatchLog();
         log.setStockBatchId(batch.getId());
         log.setSkuId(batch.getSkuId());
@@ -80,9 +91,64 @@ public class StockBatchService {
         log.setChangeQuantity(batch.getQuantity());
         log.setBeforeQuantity(0);
         log.setAfterQuantity(batch.getQuantity());
-        log.setSourceType(SOURCE_TYPE_PURCHASE_INBOUND_ITEM);
-        log.setSourceId(batch.getPurchaseInboundItemId());
+        log.setSourceType(sourceType);
+        log.setSourceId(sourceId);
         stockBatchMapper.insertLog(log);
+    }
+
+    public List<BatchConsumption> consumeByFefo(Long skuId, int quantity) {
+        validateConsumption(skuId, quantity);
+        List<StockBatch> batches = stockBatchMapper.findConsumableBySkuIdForUpdate(skuId);
+        int availableQuantity = batches.stream()
+                .map(StockBatch::getQuantity)
+                .filter(Objects::nonNull)
+                .mapToInt(Integer::intValue)
+                .sum();
+        if (availableQuantity < quantity) {
+            throw new BusinessException("库存批次数量不足，无法出库");
+        }
+
+        int remainingToConsume = quantity;
+        List<BatchConsumption> consumptions = new ArrayList<>();
+        for (StockBatch batch : batches) {
+            if (remainingToConsume == 0) {
+                break;
+            }
+            int beforeQuantity = batch.getQuantity();
+            int consumedQuantity = Math.min(beforeQuantity, remainingToConsume);
+            int afterQuantity = beforeQuantity - consumedQuantity;
+            String status = afterQuantity == 0 ? STATUS_DEPLETED : STATUS_AVAILABLE;
+            ensureBatchUpdated(stockBatchMapper.updateRemainingQuantityAndStatus(
+                    batch.getId(), batch.getSkuId(), afterQuantity, status));
+            consumptions.add(new BatchConsumption(
+                    batch.getId(),
+                    batch.getSkuId(),
+                    beforeQuantity,
+                    consumedQuantity,
+                    afterQuantity
+            ));
+            remainingToConsume -= consumedQuantity;
+        }
+        return consumptions;
+    }
+
+    public void writeOutboundLogs(List<BatchConsumption> consumptions, String sourceType, Long sourceId) {
+        if (consumptions == null || consumptions.isEmpty()) {
+            return;
+        }
+        validateSource(sourceType, sourceId);
+        for (BatchConsumption consumption : consumptions) {
+            StockBatchLog log = new StockBatchLog();
+            log.setStockBatchId(consumption.stockBatchId());
+            log.setSkuId(consumption.skuId());
+            log.setChangeType(CHANGE_TYPE_OUTBOUND);
+            log.setChangeQuantity(-consumption.consumedQuantity());
+            log.setBeforeQuantity(consumption.beforeQuantity());
+            log.setAfterQuantity(consumption.afterQuantity());
+            log.setSourceType(sourceType);
+            log.setSourceId(sourceId);
+            stockBatchMapper.insertLog(log);
+        }
     }
 
     public List<StockBatchVO> listBySkuId(Long skuId) {
@@ -95,7 +161,7 @@ public class StockBatchService {
         if (!STATUS_AVAILABLE.equals(batch.getStatus()) && !STATUS_EXPIRED.equals(batch.getStatus())) {
             throw new BusinessException("当前批次状态不允许锁定");
         }
-        stockBatchMapper.updateStatus(batchId, skuId, STATUS_LOCKED);
+        ensureBatchUpdated(stockBatchMapper.updateStatus(batchId, skuId, STATUS_LOCKED));
         writeStatusLog(batch, SOURCE_TYPE_BATCH_LOCK);
     }
 
@@ -106,12 +172,14 @@ public class StockBatchService {
             throw new BusinessException("当前批次状态不允许解锁");
         }
         String targetStatus = isExpiredWithQuantity(batch, LocalDate.now()) ? STATUS_EXPIRED : STATUS_AVAILABLE;
-        stockBatchMapper.updateStatus(batchId, skuId, targetStatus);
+        ensureBatchUpdated(stockBatchMapper.updateStatus(batchId, skuId, targetStatus));
         writeStatusLog(batch, SOURCE_TYPE_BATCH_UNLOCK);
     }
 
     @Transactional
     public void damage(Long skuId, Long batchId, StockBatchDamageRequest request) {
+        validateDamageInput(skuId, batchId, request);
+        Stock stock = getStockForUpdate(skuId);
         StockBatch batch = getBatchForUpdate(skuId, batchId);
         validateDamageRequest(batch, request);
 
@@ -120,37 +188,10 @@ public class StockBatchService {
         int afterQuantity = beforeQuantity - damageQuantity;
         String afterStatus = afterQuantity == 0 ? STATUS_DAMAGED : batch.getStatus();
 
-        stockService.damage(skuId, damageQuantity);
+        decreaseStockForDamage(stock, skuId, damageQuantity);
         ensureBatchUpdated(stockBatchMapper.updateRemainingQuantityAndStatus(batchId, skuId, afterQuantity, afterStatus));
         writeQuantityLog(batch, -damageQuantity, afterQuantity, SOURCE_TYPE_BATCH_DAMAGE,
                 request.getReason().trim(), normalizeRemark(request.getRemark()));
-    }
-
-    @Transactional
-    public void consumeAvailableBatches(Long skuId, int quantity, String sourceType, Long sourceId) {
-        validateConsumeRequest(skuId, quantity, sourceType, sourceId);
-        List<StockBatch> batches = stockBatchMapper.findAvailableBatchesForConsumption(skuId);
-        int availableQuantity = batches.stream()
-                .mapToInt(batch -> batch.getQuantity() == null ? 0 : batch.getQuantity())
-                .sum();
-        if (availableQuantity < quantity) {
-            throw new BusinessException("可用批次数量不足");
-        }
-
-        int remaining = quantity;
-        for (StockBatch batch : batches) {
-            if (remaining == 0) {
-                break;
-            }
-            int beforeQuantity = batch.getQuantity() == null ? 0 : batch.getQuantity();
-            int consumeQuantity = Math.min(beforeQuantity, remaining);
-            int afterQuantity = beforeQuantity - consumeQuantity;
-            String afterStatus = afterQuantity == 0 ? STATUS_DEPLETED : STATUS_AVAILABLE;
-            ensureBatchUpdated(stockBatchMapper.updateRemainingQuantityAndStatus(
-                    batch.getId(), batch.getSkuId(), afterQuantity, afterStatus));
-            writeOutboundLog(batch, -consumeQuantity, afterQuantity, sourceType, sourceId);
-            remaining -= consumeQuantity;
-        }
     }
 
     @Transactional
@@ -162,7 +203,7 @@ public class StockBatchService {
         if (batch.getQuantity() == null || batch.getQuantity() != 0) {
             throw new BusinessException("仅剩余数量为0的批次允许关闭");
         }
-        stockBatchMapper.updateStatus(batchId, skuId, STATUS_CLOSED);
+        ensureBatchUpdated(stockBatchMapper.updateStatus(batchId, skuId, STATUS_CLOSED));
         writeStatusLog(batch, SOURCE_TYPE_BATCH_CLOSE);
     }
 
@@ -173,10 +214,21 @@ public class StockBatchService {
         }
         List<StockBatch> batches = stockBatchMapper.findExpiredAvailableBatchesForUpdate(today);
         for (StockBatch batch : batches) {
-            stockBatchMapper.updateStatus(batch.getId(), batch.getSkuId(), STATUS_EXPIRED);
+            ensureBatchUpdated(stockBatchMapper.updateStatus(batch.getId(), batch.getSkuId(), STATUS_EXPIRED));
             writeStatusLog(batch, SOURCE_TYPE_BATCH_EXPIRE_SCAN);
         }
         return batches.size();
+    }
+
+    private Stock getStockForUpdate(Long skuId) {
+        return stockMapper.findBySkuIdForUpdate(skuId)
+                .orElseThrow(() -> new BusinessException(404, "库存记录不存在"));
+    }
+
+    private void decreaseStockForDamage(Stock stock, Long skuId, int quantity) {
+        int afterQuantity = stockDomainService.decrease(stock.getQuantity(), quantity);
+        stockMapper.updateQuantity(skuId, afterQuantity);
+        stockMapper.insertLog(skuId, CHANGE_TYPE_DAMAGE, -quantity, stock.getQuantity(), afterQuantity);
     }
 
     private StockBatch getBatchForUpdate(Long skuId, Long batchId) {
@@ -210,16 +262,6 @@ public class StockBatchService {
         stockBatchMapper.insertLog(log);
     }
 
-    private void writeOutboundLog(StockBatch batch, int changeQuantity, int afterQuantity,
-                                  String sourceType, Long sourceId) {
-        StockBatchLog log = baseLog(batch, CHANGE_TYPE_OUTBOUND, sourceType);
-        log.setChangeQuantity(changeQuantity);
-        log.setBeforeQuantity(batch.getQuantity());
-        log.setAfterQuantity(afterQuantity);
-        log.setSourceId(sourceId);
-        stockBatchMapper.insertLog(log);
-    }
-
     private StockBatchLog baseLog(StockBatch batch, String changeType, String sourceType) {
         StockBatchLog log = new StockBatchLog();
         log.setStockBatchId(batch.getId());
@@ -230,11 +272,12 @@ public class StockBatchService {
         return log;
     }
 
-    private void validateDamageRequest(StockBatch batch, StockBatchDamageRequest request) {
-        if (!STATUS_AVAILABLE.equals(batch.getStatus())
-                && !STATUS_EXPIRED.equals(batch.getStatus())
-                && !STATUS_LOCKED.equals(batch.getStatus())) {
-            throw new BusinessException("当前批次状态不允许报损");
+    private void validateDamageInput(Long skuId, Long batchId, StockBatchDamageRequest request) {
+        if (skuId == null) {
+            throw new BusinessException("SKU ID不能为空");
+        }
+        if (batchId == null) {
+            throw new BusinessException("库存批次ID不能为空");
         }
         if (request == null) {
             throw new BusinessException("报损参数不能为空");
@@ -242,26 +285,37 @@ public class StockBatchService {
         if (request.getQuantity() == null || request.getQuantity() <= 0) {
             throw new BusinessException("报损数量必须大于0");
         }
-        if (batch.getQuantity() == null || request.getQuantity() > batch.getQuantity()) {
-            throw new BusinessException("报损数量不能超过批次剩余数量");
-        }
         if (request.getReason() == null || request.getReason().trim().isEmpty()) {
             throw new BusinessException("报损原因不能为空");
         }
     }
 
-    private void validateConsumeRequest(Long skuId, int quantity, String sourceType, Long sourceId) {
+    private void validateDamageRequest(StockBatch batch, StockBatchDamageRequest request) {
+        if (!STATUS_AVAILABLE.equals(batch.getStatus())
+                && !STATUS_EXPIRED.equals(batch.getStatus())
+                && !STATUS_LOCKED.equals(batch.getStatus())) {
+            throw new BusinessException("当前批次状态不允许报损");
+        }
+        if (batch.getQuantity() == null || request.getQuantity() > batch.getQuantity()) {
+            throw new BusinessException("报损数量不能超过批次剩余数量");
+        }
+    }
+
+    private void validateConsumption(Long skuId, int quantity) {
         if (skuId == null) {
             throw new BusinessException("SKU ID不能为空");
         }
         if (quantity <= 0) {
-            throw new BusinessException("出库数量必须大于0");
+            throw new BusinessException("库存变化数量必须大于0");
         }
-        if (sourceType == null || sourceType.trim().isEmpty()) {
-            throw new BusinessException("出库来源类型不能为空");
+    }
+
+    private void validateSource(String sourceType, Long sourceId) {
+        if (sourceType == null || sourceType.isBlank()) {
+            throw new BusinessException("库存来源类型不能为空");
         }
         if (sourceId == null) {
-            throw new BusinessException("出库来源ID不能为空");
+            throw new BusinessException("库存来源ID不能为空");
         }
     }
 
@@ -288,25 +342,25 @@ public class StockBatchService {
 
     private void validateCreateCommand(StockBatchCreateCommand command) {
         if (command == null) {
-            throw new BusinessException("\u5e93\u5b58\u6279\u6b21\u521b\u5efa\u53c2\u6570\u4e0d\u80fd\u4e3a\u7a7a");
+            throw new BusinessException("库存批次创建参数不能为空");
         }
         if (command.getSkuId() == null) {
-            throw new BusinessException("SKU ID\u4e0d\u80fd\u4e3a\u7a7a");
+            throw new BusinessException("SKU ID不能为空");
         }
         if (command.getPurchaseInboundItemId() == null) {
-            throw new BusinessException("\u91c7\u8d2d\u5165\u5e93\u660e\u7ec6ID\u4e0d\u80fd\u4e3a\u7a7a");
+            throw new BusinessException("采购入库明细ID不能为空");
         }
         if (command.getBaseQuantity() == null || command.getBaseQuantity() <= 0) {
-            throw new BusinessException("\u6279\u6b21\u6570\u91cf\u5fc5\u987b\u5927\u4e8e0");
+            throw new BusinessException("批次数量必须大于0");
         }
         if (command.getPurchasePrice() == null || command.getPurchasePrice().compareTo(BigDecimal.ZERO) < 0) {
-            throw new BusinessException("\u6279\u6b21\u8fdb\u4ef7\u4e0d\u80fd\u5c0f\u4e8e0");
+            throw new BusinessException("批次进价不能小于0");
         }
         if (command.getProductionDate() == null) {
-            throw new BusinessException("\u751f\u4ea7\u65e5\u671f\u4e0d\u80fd\u4e3a\u7a7a");
+            throw new BusinessException("生产日期不能为空");
         }
         if (command.getShelfLifeDays() == null || command.getShelfLifeDays() <= 0) {
-            throw new BusinessException("\u4fdd\u8d28\u671f\u5929\u6570\u5fc5\u987b\u5927\u4e8e0");
+            throw new BusinessException("保质期天数必须大于0");
         }
     }
 
@@ -318,12 +372,21 @@ public class StockBatchService {
             try {
                 sequence = Integer.parseInt(maxBatchNo.substring(prefix.length())) + 1;
             } catch (NumberFormatException exception) {
-                throw new BusinessException("\u5e93\u5b58\u6279\u6b21\u53f7\u5e8f\u53f7\u5f02\u5e38");
+                throw new BusinessException("库存批次号序号异常");
             }
         }
         if (sequence > 999) {
-            throw new BusinessException("\u5e93\u5b58\u6279\u6b21\u53f7\u5f53\u65e5\u5e8f\u53f7\u5df2\u8fbe\u4e0a\u9650");
+            throw new BusinessException("库存批次号当日序号已达上限");
         }
         return prefix + String.format("%03d", sequence);
+    }
+
+    public record BatchConsumption(
+            Long stockBatchId,
+            Long skuId,
+            int beforeQuantity,
+            int consumedQuantity,
+            int afterQuantity
+    ) {
     }
 }
